# ai-agent

./: .cursorrule  .gitignore  .npmrc  .prettierignore  README.md  Xポストシステムプロンプト.md  amplify.yml  docker-compose.dynamodb.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: backend-infra.yml  deploy-notification.yml  e2e-test.yml  pr-test.yml  terraform-apply.yml
.husky/: pre-commit  pre-push
apps/web/: .eslintrc.json  README.md  next.config.js  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.integration.config.ts  vitest.setup.ts
config/: env.example
docs/: 00-development-roadmap.md  00-ローカル環境セットアップ.md  00-開発ロードマップ.md  01-CI-CD-クイックスタート.md  01-ci-cd-quickstart.md  02-GitHub-Secrets-チェックリスト.md  02-github-secrets-checklist.md  03-branch-setup-guide.md  03-ブランチ設定ガイド.md  04-amplify-setup-guide.md  05-CI-CD-リファレンス.md  05-setup-ci-cd-reference.md  06-branching-strategy-reference.md  06-ブランチ戦略リファレンス.md  07-Husky-セットアップ.md  07-branch-naming.md  07-husky-setup.md  07-ブランチ命名規則.md  08-testing-guide.md  08-テストガイド.md  09-Amplify-Nextjs-SSR-デプロイ失敗の原因と解決.md  README.md  ci-branch-checks.md  ci-cd-quickstart-team.md  mcp-github-setup.md
docs/architecture/: DynamoDBマルチテーブル移行設計.md  UIコンポーネントガイド.md  agentcore.md  audit-security.md  auth-tenant.md  ci.md  (+13 more)
services/agent-core/: README.md  pyproject.toml
services/agent-core/src/: main.py
services/agent-core/tests/: test_main.py
セキュリティ/: セキュリティリスト.md
(+189 files in other folders)
